# benchkit

./: .envrc.example  Cargo.toml  LICENSE  README.md  benchmark.yml  config.yml  default.nix  example.benchmark.yml  flake.nix  justfile  shell.nix  todo.md
.github/workflows/: build.yml  test.yml
config-examples/: README.md  assumeutxo.yml  full-ibd.yml  parameter-matrix.yml  stop-on-log-pattern.yml
docs/: INTERNAL_BENCHMARKING.md  hook-modes.md
patches/: 0001-guix-benchmarking-patches.patch  0001-validation-assumeutxo-benchmarking-patches.patch  assumeutxo.patch  guix.patch
scripts/: cleanup.sh  conclude.sh  prepare-noassumeutxo.sh  prepare.sh  setup.sh
src/: command.rs  config.rs  cpu_binding.rs  download.rs  home.rs  lib.rs  main.rs  path_utils.rs  system.rs  system_info.rs  trace.rs  types.rs
src/benchmarks/: benchmark_runner.rs  build.rs  config.rs  config_adapter.rs  export.rs  hook_runner.rs  hooks.rs  log_monitor.rs  mod.rs  object_storage.rs  parameter.rs  parameters.rs  perf.rs  profiler.rs  repository.rs  results.rs  runner.rs  utils.rs
src/config/: adapter.rs  app.rs  benchmark.rs  benchmark_ext.rs  merge.rs  mod.rs  tests.rs  traits.rs
src/database/: config.rs  mod.rs  schema.sql  store.rs  tests.rs
src/networked/: announce.rs  client.rs  mod.rs
tests/: integration.rs  remove-test-db.sh  setup-test-db.sh  test_utils.rs
