[package]
name = "benchkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[features]
default = []
database = ["dep:postgres"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["cargo", "derive", "env"] }
env_logger = "0.11.6"
indicatif = "0.17.11"
log = "0.4.26"
object_store = { version = "0.11.2", features = ["aws"] }
postgres = { version = "0.19.10", optional = true }
rand = "0.9.0"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
serial_test = "3.2.0"
shellexpand = "3.1.0"
sysinfo = "0.33.1"
tempfile = "3.17.1"
thiserror = "2.0.11"
url = "2.5.4"
